--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ description = "A simple thread pool implementation, to learn Rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-lazy_static = "1.4.0"
+timed = {path = "../timed"}
